# ultralog

./: .gitignore  Cargo.toml  README.md  benchmark.py  pyproject.toml  test.ipynb  test.py  test_rotation.py
.github/workflows/: CI.yml  release.yml
tests/: test_api.py  test_concurrency.py  test_log_format.py  test_performance.py  test_rust_api.py
ultralog/: __init__.py  local.py  utils.py
ultralog/python/ultralog/: __init__.py  local.py  server.py
ultralog/src/: lib.rs
