[package]
name = "ultralog"
version = "0.5.0"
edition = "2021"
authors = ["BirchKwok <birchkwok@gmail.com>"]
description = "High-performance thread-safe logger with async batched writes and log rotation"
license = "Apache-2.0"
repository = "https://github.com/BirchKwok/ultralog"
homepage = "https://github.com/BirchKwok/ultralog"
documentation = "https://docs.rs/ultralog"
keywords = ["logging", "logger", "async", "performance", "rotation"]
categories = ["development-tools::debugging"]
readme = "README.md"
exclude = ["tests/", ".github/", "*.ipynb", "*.py"]

[lib]
name = "ultralog"
path = "ultralog/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
