[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultralog"
version = "0.1.0"
authors = [
    {name = "BirchKwok", email = "birchkwok@gmail.com"},
]
description = "High-performance thread-safe logger with optimized file writing and rotation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/birchkwok/ultralog"